@@ -1,16 +1,17 @@
-package com.github.flexca.enot.core.asn1;
+package com.github.flexca.enot.core.types.asn1;
 
-import com.github.flexca.enot.core.asn1.attribute.Asn1Attribute;
-import com.github.flexca.enot.core.asn1.validation.Asn1ElementValidator;
+import com.github.flexca.enot.core.types.asn1.attribute.Asn1Attribute;
+import com.github.flexca.enot.core.types.asn1.validation.Asn1ElementValidator;
 import com.github.flexca.enot.core.registry.EnotElementSpecification;
 import com.github.flexca.enot.core.registry.EnotElementValidator;
 import com.github.flexca.enot.core.registry.EnotTypeSpecification;
 import com.github.flexca.enot.core.element.EnotElement;
 import com.github.flexca.enot.core.element.attribute.EnotAttribute;
 import com.github.flexca.enot.core.element.value.EnotValueType;
+import com.github.flexca.enot.core.serializer.ElementSerializer;
 
-import java.util.Arrays;
 import java.util.List;
+import java.util.Optional;
 
 public class Asn1TypeSpecification implements EnotTypeSpecification {
 
@@ -30,7 +31,7 @@ public class Asn1TypeSpecification implements EnotTypeSpecification {
 
     @Override
     public List<EnotAttribute> getAttributes() {
-        return Arrays.asList(Asn1Attribute.values());
+        return List.of(Asn1Attribute.values());
     }
 
     @Override
@@ -40,6 +41,24 @@ public class Asn1TypeSpecification implements EnotTypeSpecification {
 
     @Override
     public EnotElementSpecification getElementSpecification(EnotElement element) {
+        return getAsn1TagForElement(element);
+    }
+
+    @Override
+    public EnotElementValidator getElementValidator() {
+        return asn1ElementValidator;
+    }
+
+    @Override
+    public ElementSerializer getSerializer(EnotElement element) {
+        Asn1Tag tag = getAsn1TagForElement(element);
+        if (tag == null) {
+            return null;
+        }
+        return tag.getElementSerializer();
+    }
+
+    private Asn1Tag getAsn1TagForElement(EnotElement element) {
         Object tagObject = element.getAttributes().get(Asn1Attribute.TAG);
         if (tagObject instanceof String tagString) {
             Asn1Tag tag = Asn1Tag.fromString(tagString);
@@ -48,10 +67,5 @@ public class Asn1TypeSpecification implements EnotTypeSpecification {
             }
         }
         return null;
-    }
-
-    @Override
-    public EnotElementValidator getElementValidator() {
-        return asn1ElementValidator;
     }
 }
